--- a/_config.yml
+++ b/_config.yml
@@ -42,12 +42,12 @@ facebook_appid:
 facebook_comments_number: 10
 
 # Social icons
-github_username:
+github_username: hairwire
 bitbucket_username:
 stackoverflow_id:
-twitter_username:
+twitter_username: alistinnie
 skype_username:
-steam_nickname:
+steam_nickname: hairwire116
 google_plus_id:
 linkedin_username:
 angellist_username:
