--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ bitbucket_username:
 stackoverflow_id:
 twitter_username: alistinnie
 skype_username:
-steam_nickname: hairwire116
+steam_nickname: hairwire
 google_plus_id:
 linkedin_username:
 angellist_username:
